<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProductivityInside</string>
    <string name="city">Город</string>
    <string name="continent">Континент: %s</string>
    <string name="county">Страна: %s</string>
    <string name="region">Регион: %s</string>
    <string name="weather">Погода:</string>
    <string name="temperature">Температура: %s °C</string>
    <string name="pressure">Давление: %s мм.рт.ст</string>
    <string name="language">Язык:</string>
    <string name="last_update_time">Последнее обновление: %s</string>
    <string name="place_info">Информация о местоположении:</string>
    <string name="serverOne">Сервер 1</string>
    <string name="serverTwo">Сервер 2</string>
    <string name="serverThree">Сервер 3</string>
    <string name="example_appwidget_description">Widget</string>
    <string-array name="servers_name_spinner">
        <item>Сервер 1</item>
        <item>Сервер 2</item>
        <item>Сервер 3</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>