<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.ProductivityInside.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.ProductivityInside.AppWidgetContainer"
    android:background="@drawable/main_activity_background"
    android:padding="10dp"
    android:layout_marginHorizontal="20dp">

    <TextView
        android:id="@+id/city_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:fontFamily="@font/ontesserat_regular"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/temperature_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/ontesserat_regular"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/last_update_time_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="250dp"
        android:text="@string/last_update_time"
        android:fontFamily="@font/ontesserat_regular"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="20dp"
        />

    <ImageView
        android:id="@+id/weather_image_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rainy"
        android:layout_marginStart="240dp"
        />

</FrameLayout>